<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="18dp"
        tools:context=".ui.activities.DetailActivity">

        <ImageView
            android:id="@+id/iv_backdrop"
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:background="@drawable/fg_backdrop"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="133dp"
            android:layout_height="215dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="150dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_backdrop"
            android:layout_marginBottom="16dp"
            android:layout_toRightOf="@id/iv_poster"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/label_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_backdrop"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:layout_toRightOf="@id/iv_poster"
            android:text="@string/rate"
            android:textSize="14sp" />

        <RatingBar
            android:id="@+id/rb_rating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_rate"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/iv_poster"
            android:numStars="5"
            android:stepSize="0.1" />

        <TextView
            android:id="@+id/label_first_air_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rb_rating"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/iv_poster"
            android:text="@string/first_air_date"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_first_air_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_first_air_date"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/iv_poster"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/label_last_air_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rb_rating"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/label_first_air_date"
            android:text="@string/last_air_date"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_last_air_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_first_air_date"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@id/tv_first_air_date"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/label_season"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_first_air_date"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/iv_poster"
            android:text="@string/season"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_season"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_season"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/iv_poster"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/label_episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_last_air_date"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/label_first_air_date"
            android:text="@string/episode"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_episode"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@id/tv_first_air_date"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_poster"
            android:translationY="-20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:clipToPadding = "false"
            tools:listitem="@layout/item_genre_recycler"
            />

        <TextView
            android:id="@+id/label_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_poster"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/overview"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_overview"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_cast_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cast"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_below="@id/tv_overview"
            android:textSize="18sp"
            android:layout_marginLeft="26dp" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/tv_cast_header"
            android:paddingLeft="16dp"
            android:clipToPadding = "false"
            tools:listitem="@layout/item_cast_recycler"
            />

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="16dp" />
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>